shaping cards and beginning to apply transformation

--- a/index.html
+++ b/index.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <script defer src="script.js"></script>
     <title>Hue You Know</title>
 </head>
+
 <body>
-    <h1>🅗🅤🅔 🅨🅞🅤 🅚🅝🅞🅦</h1>
-    <div class="theCards">
-        <span id="card1">Card 1</span>
-        <span id="card2">Card 2</span>
-        <span id="card3">Card 3</span>
-        <br>
-        <br>
-        <br>
-        <br>
-        <span id="card4">Card 4</span>
-        <span id="card5">Card 5</span>
-        <span id="card6">Card 6</span>
-    </div>
-    <div class="bubblesLeft">
-        <span id="bubble1"></span>
-        <span id="bubble2"></span>
-        <span id="bubble3"></span>
-        <span id="bubble4"></span>
-   </div>
-   <div class="bubblesRight">
-        <span id="bubble5"></span>
-        <span id="bubble6"></span>
-        <span id="bubble7"></span>
-        <span id="bubble8"></span>
-   </div>
-    <div id="score"></div>
-    <div></div>
+    <main>
+        <h1>🅗🅤🅔 🅨🅞🅤 🅚🅝🅞🅦</h1>
+        <div class="theCards">
+            <div id="card1">🅗🅨🅚</div>
+            <div id="card2">🅗🅨🅚</div>
+            <div id="card3">🅗🅨🅚</div>
+            <br>
+            <div id="card4">🅗🅨🅚</div>
+            <div id="card5">🅗🅨🅚</div>
+            <div id="card6">🅗🅨🅚</div>
+        </div>
+        <div class="bubblesLeft">
+            <span id="bubble1"></span>
+            <span id="bubble2"></span>
+            <span id="bubble3"></span>
+            <span id="bubble4"></span>
+        </div>
+        <div class="bubblesRight">
+            <span id="bubble5"></span>
+            <span id="bubble6"></span>
+            <span id="bubble7"></span>
+            <span id="bubble8"></span>
+        </div>
+        <div id="score"></div>
+        <div></div>
+    </main>
 </body>
+
 </html>
