fixed restart button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div>
-            <p id="level">Level: <span id="levelNumber">7</span></p>
+            <p id="level">Level: <span id="levelNumber">0</span></p>
         </div>
             <div class="rows">
                 <div data-color="aerospaceOrange" class="theCards aerospaceOrange color-hidden" onclick="cardClicked(event)"></div>
@@ -53,7 +53,7 @@
 
             <div id="metrics">
                 <p id="Lives">Lives: <span class=totalLivesCount id="totalLives">0</span></p>
-                <button id="restart" onclick="Restart()">Restart</button>
+                <button class="restart" onclick="Restart()">Restart</button>
             </div>
     </main>
 </body>
